# amplify-backend

./: .env.example  .gitignore  .replit  CLAUDE.md  init_db.py  main.py  openapi.yaml  pyproject.toml  pytest.ini  replit.md  requirements.txt
WIP/: OpenAPI_v2.md  YouTubeCard Feature Product Requirements & Implementation Plan.md
app/: __init__.py
app/core/: auth.py  config.py  database.py  errors.py
app/models/: __init__.py  base.py  enhancement.py  user.py  youtube_card.py
app/prompts/: __init__.py  config.yaml  professional.yaml  social.yaml  youtube_insight.yaml
app/schemas/: ai_response.py  audio.py  auth.py  common.py  enhancement.py  utility.py  youtube.py
app/services/: __init__.py  ai_service_factory.py  ai_service_interface.py  gemini_service.py  google_auth_service.py  openai_service.py  prompt_manager.py  tts_service.py
attached_assets/: Pasted-amplify-backend-replit-Replit-specific-configuration-for-running-the-app--1757107987294_1757107987295.txt
migrations/: add_youtube_support.py
tests/: conftest.py
tests/contract/: conftest.py  test_openapi_compliance.py  test_openapi_spec.py
tests/e2e/: conftest.py  test_user_workflows.py
tests/integration/: test_auth_endpoints.py  test_enhancement_endpoints.py  test_gemini_integration.py  test_health_endpoints.py
tests/unit/: test_ai_service_factory.py  test_ai_service_interface.py  test_auth.py  test_config.py  test_coverage_phase1.py  test_database.py  test_gemini_service.py  test_gemini_service_interface.py  test_google_auth_service.py  test_models.py  test_openai_service.py  test_schemas.py  (+5 more)
(+15 files in other folders)
